<resources>
    <string name="app_name">turbotrack</string>
    <string name="add_ingredient_name_hint">Name</string>
    <string name="add_ingredient_calories_hint">Calories</string>
    <string name="add_meal_title">Meal Name</string>
    <string name="meal_ingredient_detail_button_title">Ingredients</string>
    <string name="fave_snacks">Weekly Snacks</string>
    <string name="weekly_nutrition">Weekly Nutrition</string>
    <string name="last_meals">Weeks Meals</string>
    <string name="meal">Meal</string>
    <string name="scan">scan</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
    <string name="go_back">Go Back</string>
    <string name="cancel">Cancel</string>
    <string name="add_meal">Add Meal</string>
    <string name="snack">Snack</string>
    <string name="cal">cal</string>
    <string name="g_ml">g/ml</string>
    <string name="protein">protein</string>
    <string name="fat">fat</string>
    <string name="salt">salt</string>
    <string name="sugar">sugar</string>
    <string name="flashlight">Flashlight</string>
    <string name="volume_buttons_control_flash">Volume buttons control flash</string>
</resources>