<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <EditText
        android:id="@+id/meal_add_meal_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/textlines"
        android:hint="@string/add_meal_title"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="#363636"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/meal_add_ingredient_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/add_ingredient_button"
        android:drawableStart="@android:drawable/ic_input_add"
        android:drawableEnd="@android:drawable/ic_input_add"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/meal_scan_ingredient_button"
        app:layout_constraintTop_toBottomOf="@+id/meal_add_meal_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/meal_scan_ingredient_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/add_ingredient_button"
        android:drawableStart="@android:drawable/ic_input_add"
        android:drawableEnd="@android:drawable/ic_input_add"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/scan"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/meal_add_ingredient_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_add_meal_name" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/meal_ingredient_close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_add_ingredient_button">

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/meal_ingredient_close_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/add_snack_button"
        android:drawableEnd="@android:drawable/ic_input_delete"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/meal_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/meal_submit_button"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/add_snack_button"
        android:drawableEnd="@android:drawable/ic_input_add"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/add_meal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_snack"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/snack"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/meal_add_ingredient_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
