<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_meal_button"

        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"

        android:background="@drawable/add_meal_button"
        android:drawableLeft="@android:drawable/ic_input_add"
        android:gravity="right|center"
        android:paddingLeft="5dp"
        android:paddingRight="25dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/meal"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="439dp"
        android:layout_height="217dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        android:background="@drawable/textlines_top_bottom" />


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="411dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container"
        app:layout_constraintVertical_bias="0.148">

        <LinearLayout
            android:id="@+id/meal_clicked_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>


    <LinearLayout
        android:id="@+id/fave_snacks_last_meal_container"
        android:layout_width="412dp"
        android:layout_height="311dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container">

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/text_fave_snacks"
                android:layout_width="185dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/last_meals"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ScrollView
                android:layout_width="184dp"
                android:layout_height="220dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/textlines_top_right_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_fave_snacks"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:id="@+id/scroll_view_last_meals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


            </ScrollView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_last_meals"
                android:layout_width="184dp"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/fave_snacks"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/text_fave_snacks"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="192dp"
                android:layout_height="220dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/textlines_top_left_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_last_meals"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:id="@+id/scroll_view_fave_snacks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/weekly_nutrition_button"
        android:layout_width="396dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/add_ingredient_button"
        android:text="@string/weekly_nutrition"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4"
        app:layout_constraintVertical_bias="0.708" />


</androidx.constraintlayout.widget.ConstraintLayout>